--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,8 @@
 {
+  "plugins": ["babel-plugin-styled-components"],
   "presets": [
     ["env", { "targets": { "node": "8" }}],
     "stage-0",
-    "react"
+    "react",
   ]
 }
